--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <!-- android:screenOrientation="portrait" pour bloquer en portrait -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iiens.net"
-    android:versionCode="5"
-    android:versionName="1.22" >
+    android:versionCode="7"
+    android:versionName="1.3" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -13,11 +13,11 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name="GlobalState"
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppBaseTheme"
-        android:name="GlobalState" >
+        android:theme="@style/AppBaseTheme" >
 
         <!-- Splash Screen -->
         <activity
@@ -46,8 +46,8 @@
         </activity>
         <activity android:name="com.iiens.net.PhotosFullImageActivity" >
         </activity>
-        
-                <!-- Login -->
+
+        <!-- Media -->
         <activity
             android:name="com.iiens.net.Media"
             android:label="@string/app_name"
@@ -55,13 +55,6 @@
             android:windowSoftInputMode="adjustPan" >
         </activity>
         
-                        <!-- Login -->
-        <activity
-            android:name="com.iiens.net.Certificate"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"
-            android:windowSoftInputMode="adjustPan" >
-        </activity>
     </application>
 
 </manifest>
