--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iiens.net"
-    android:versionCode="7"
-    android:versionName="1.3" >
+    android:versionCode="9"
+    android:versionName="1.32" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -29,14 +29,13 @@
             </intent-filter>
         </activity>
 
-<!--         Login
+<!--         Login-->
         <activity
             android:name="com.iiens.net.Login"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="adjustPan" >
-        </activity> -->
-
+        </activity>
         <!-- Main -->
         <activity
             android:name="com.iiens.net.Main"
