--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="com.iiens.net.permission.C2D_MESSAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name="GlobalState"
@@ -60,8 +61,13 @@
         </activity>
 
         <!-- Main -->
-        <activity
+        <activity 
             android:name="com.iiens.net.Main"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name="com.iiens.net.EdtResult"
             android:label="@string/app_name" >
         </activity>
     </application>
