--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,10 +36,10 @@
         </receiver>
 
         <service android:name=".GCMIntentService" />
-        
-            <meta-data
-        android:name="com.google.android.gms.version"
-        android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <!-- Splash Screen -->
         <activity
@@ -62,13 +62,18 @@
         </activity>
 
         <!-- Main -->
-        <activity 
+        <activity
             android:name="com.iiens.net.Main"
             android:label="@string/app_name" >
         </activity>
         
         <activity
             android:name="com.iiens.net.EdtResult"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name="com.iiens.net.TrombiResult"
             android:label="@string/app_name" >
         </activity>
     </application>
