--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity
             android:name="com.iiens.net.Login"
             android:label="@string/app_name"
+            android:launchMode="singleTask"
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="adjustPan" >
         </activity>
@@ -64,17 +65,18 @@
         <!-- Main -->
         <activity
             android:name="com.iiens.net.Main"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTask" >
         </activity>
-        
         <activity
             android:name="com.iiens.net.EdtResult"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTask" >
         </activity>
-        
         <activity
             android:name="com.iiens.net.TrombiResult"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTask" >
         </activity>
     </application>
 
