--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iiens.net"
     android:versionCode="9"
-    android:versionName="1.32" >
+    android:versionName="1.4" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -17,7 +17,7 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="com.iiens.net.permission.C2D_MESSAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
+<!--     <uses-permission android:name="android.permission.CALL_PHONE" /> -->
 
     <application
         android:name="GlobalState"
@@ -73,11 +73,12 @@
             android:label="@string/app_name"
             android:launchMode="singleTask" >
         </activity>
-        <activity
+        <!--
+             <activity
             android:name="com.iiens.net.TrombiResult"
-            android:label="@string/app_name"
-            android:launchMode="singleTask" >
+            android:label="@string/app_name" >
         </activity>
+        -->
     </application>
 
 </manifest>
