--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iiens.net"
-    android:versionCode="12"
-    android:versionName="1.5" >
+    android:versionCode="13"
+    android:versionName="1.6" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -20,17 +20,26 @@
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
     <application
-        android:name="GlobalState"
+        android:name=".GlobalState"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppBaseTheme">
+        android:theme="@style/AppBaseTheme" >
         <receiver
             android:name=".gcm.GCMBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
                 <category android:name="com.iiens.net" />
             </intent-filter>
         </receiver>
@@ -41,9 +50,8 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <!-- Splash Screen -->
         <activity
-            android:name="com.iiens.net.SplashScreen"
+            android:name=".SplashScreen"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
@@ -52,16 +60,14 @@
             </intent-filter>
         </activity>
 
-        <!-- Main -->
         <activity
-            android:name="com.iiens.net.Main"
+            android:name=".ActionBar"
             android:label="@string/app_name"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTask">
         </activity>
 
-        <!-- Result activities -->
         <activity
-            android:name="com.iiens.net.EdtResult"
+            android:name=".EdtResult"
             android:label="@string/app_name"
             android:launchMode="singleTask" >
         </activity>
