--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.6" >
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="16"
         android:targetSdkVersion="21" />
 
     <permission
@@ -61,7 +61,7 @@
         </activity>
 
         <activity
-            android:name=".ActionBar"
+            android:name=".Main"
             android:label="@string/app_name"
             android:launchMode="singleTask">
         </activity>
