--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/IIEnsTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <!--<service android:name=".fcm.FbMessagingService">-->
             <!--<intent-filter>-->
@@ -38,7 +38,7 @@
 
         <activity android:name=".SplashScreen"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Material.NoActionBar.Fullscreen">
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -52,7 +52,7 @@
 
         <activity android:name="Main"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Material">
+            android:theme="@style/IIEnsTheme">
         </activity>
 
         <activity android:name="Itvtube"
