--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,9 +55,14 @@
             android:theme="@style/IIEnsTheme.Light">
         </activity>
 
+        <activity android:name="ClubPage"
+                  android:label="@string/app_name"
+                  android:theme="@style/IIEnsTheme.Light">
+        </activity>
+
         <activity android:name="Itvtube"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:theme="@style/IIEnsTheme.Light"
             android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
     </application>
