--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url 'https://maven.fabric.io/repo' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -12,11 +11,16 @@ buildscript {
     }
 }
 
-ext{
+ext {
     ANDROID_BUILD_MIN_SDK_VERSION=22
-    ANDROID_BUILD_TARGET_SDK_VERSION=25
-    ANDROID_BUILD_TOOLS_VERSION="25.0.2"
-    ANDROID_BUILD_SDK_VERSION=25
+    ANDROID_BUILD_TARGET_SDK_VERSION=26
+    ANDROID_BUILD_TOOLS_VERSION="26.1.1"
+    ANDROID_BUILD_SDK_VERSION=26
+
+    CONF_KEY=""
+    CONF_PASSWD=
+    CONF_STORE_FILE=
+    CONF_STORE_PASSWD=
 
     IIENS_VERSION_CODE=14
     IIENS_VERSION_NAME="2.0"
