--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.google.gms:google-services:3.2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -14,7 +15,7 @@ buildscript {
 ext {
     ANDROID_BUILD_MIN_SDK_VERSION=22
     ANDROID_BUILD_TARGET_SDK_VERSION=26
-    ANDROID_BUILD_TOOLS_VERSION="26.1.1"
+    ANDROID_BUILD_TOOLS_VERSION="27.0.3"
     ANDROID_BUILD_SDK_VERSION=26
 
     IIENS_VERSION_CODE=14
@@ -24,5 +25,8 @@ ext {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
     }
 }
