--- a/build.gradle
+++ b/build.gradle
@@ -30,5 +30,6 @@ allprojects {
         maven {
             url "https://maven.google.com" // Google's Maven repository
         }
+        maven { url 'https://jitpack.io' }
     }
 }
